Añadir descripcion nosotros

--- a/frontend/html/nosotros.html
+++ b/frontend/html/nosotros.html
@@ -18,9 +18,16 @@
     <div class="nosotros-container">
         <div class="info-container">
             <h1 class="title">¡Conócenos un poco!</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio voluptas perspiciatis sit saepe tenetur. Laboriosam veniam quo eligendi molestiae quod amet necessitatibus molestias totam veritatis, suscipit sit ipsa rerum nihil.
-            Ullam repellat quis, perferendis similique cumque qui corrupti iste voluptatum debitis enim cum voluptatem aperiam officiis magnam eligendi unde aspernatur porro. Ut hic necessitatibus amet id, alias soluta reprehenderit! Exercitationem.
-            Atque, sequi. Impedit qui nostrum nam quis aspernatur nisi et, quibusdam tenetur repudiandae animi error accusamus hic totam ipsam porro necessitatibus neque. Dolorum ex tempore, vero ducimus dicta quo repudiandae?
+            <p>          ¡Bienvenidos a su tienda AGON! Nos dedicamos a mejorar tu bienestar y
+              rendimiento a través de una amplia gama de productos deportivos de
+              alta calidad, servicios de nutrición personalizados y entrenamientos
+              diseñados por expertos. Ya sea que busques el mejor equipamiento para
+              tus actividades deportivas, un plan de alimentación que potencie tu
+              energía y recuperación, o un programa de entrenamiento adaptado a tus
+              metas, en AGON encontrarás todo lo que necesitas para transformar tu
+              estilo de vida y alcanzar un nuevo nivel de rendimiento. Únete a
+              nuestra comunidad y descubre cómo podemos ayudarte a ser la mejor
+              versión de ti mismo.
             </p>
         </div>
         <div id="cards-team-container" class="row cards-team-container gap-3 ">
