--- a/frontend/html/contactanos.html
+++ b/frontend/html/contactanos.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<html lang="es">
 <html>
   <head>
     <meta charset="utf-8" />
+    <title> Contáctanos</title>
     <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="/Proyecto_Final_Generation/frontend/css/contactanos.css" />
+    <link rel="stylesheet" href="/frontend/css/contactanos.css" />
   </head>
   <body>
     <div class="mobile mobile-wrapper">
