--- a/frontend/html/nosotros.html
+++ b/frontend/html/nosotros.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Nosotros</title>
-    <link rel="stylesheet" href="/frontend/css/body.css" />
-    <link rel="stylesheet" href="/frontend/css/nosotros.css" />
+    <link rel="stylesheet" href="/Proyecto_Final_Generation/frontend/css/body.css" />
+    <link rel="stylesheet" href="/Proyecto_Final_Generation/frontend/css/nosotros.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,7 +34,7 @@
 
         </div>
     </div>
-    <script src="/frontend/js/nosotros.js"></script>
+    <script src="/Proyecto_Final_Generation/frontend/js/nosotros.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
