--- a/frontend/html/contactanos.html
+++ b/frontend/html/contactanos.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title> Contáctanos</title>
+    <link rel="icon" type="image/png" href="/frontend/css/img/iconoagon-2@2x.png"/>
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="/frontend/css/contactanos.css" />
   </head>
