--- a/frontend/html/nosotros.html
+++ b/frontend/html/nosotros.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Estilos -->
+    <link rel="stylesheet" href="/frontend/css/body.css" />
+    <link rel="stylesheet" href="/frontend/css/nosotros.css" />
+    <!-- Personalizacion -->
     <title>Nosotros</title>
-    <link rel="stylesheet" href="/Proyecto_Final_Generation/frontend/css/body.css" />
-    <link rel="stylesheet" href="/Proyecto_Final_Generation/frontend/css/nosotros.css" />
+    <link rel="icon" type="image/png" href="/frontend/css/img/iconoagon-2@2x.png"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
+    <!-- CONTENEDOR PARA INFORMACION -->
     <div class="nosotros-container">
         <div class="info-container">
             <h1 class="title">¡Conócenos un poco!</h1>
@@ -30,11 +34,12 @@
               versión de ti mismo.
             </p>
         </div>
+        <!-- CONTENEDOR PRINCIPAL PARA LAS CARDS -->
         <div id="cards-team-container" class="row cards-team-container gap-3 ">
 
         </div>
     </div>
-    <script src="/Proyecto_Final_Generation/frontend/js/nosotros.js"></script>
+    <script src="/frontend/js/nosotros.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
