Validación del formulario

--- a/contacto.html
+++ b/contacto.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="contacto.css" />
   </head>
   <body >
-    <section class="contact container pt-5  m-3 m-md-0">
+    <section class="contact container pt-5 m-2 m-md-0">
       <h2>¿Tienes alguna duda? Cuentanos un poco más</h2>
       <p class="mb-5">
         Tus solicitudes serán contestadas por uno de nuestros asesores en un plazo maximo de tres días hábiles
       </p>
-      <div class="card-contact-container row pt-5">
+      <div class="card-contact-container row p-4 m-3">
         <div class="form-container col col-md-8 mb-5 mb-md-0 pe-md-5">
           <form class="form-contact">
             <div class="contact-group">
@@ -37,7 +37,7 @@
             </div>
 
             <div class="contact-group">
-              <textarea id="txtConsult" rows="3" placeholder=" "></textarea>
+              <textarea id="txtConsult" rows="2" placeholder=" "></textarea>
               <label for="consulta">Consulta</label>
             </div>
 
