--- a/frontend/html/contacto.html
+++ b/frontend/html/contacto.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <!-- Personalizacion -->
+    <title>Contáctenos</title>
+    <link rel="icon" type="image/png" href="/frontend/css/img/iconoagon-2@2x.png"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="contacto.css" />
+    <link rel="stylesheet" href="/frontend/css/contacto.css" />
   </head>
   <body >
     <section class="contact container pt-5 m-2 m-md-0">
-      <h2>¿Tienes alguna duda? Cuentanos un poco más</h2>
+      <h2>¿Tienes alguna duda? Cuéntanos un poco más</h2>
       <p class="mb-5">
         Tus solicitudes serán contestadas por uno de nuestros asesores en un plazo maximo de tres días hábiles
       </p>
       <div class="card-contact-container row p-4 m-3">
         <div class="form-container col col-md-8 mb-5 mb-md-0 pe-md-5">
-          <form class="form-contact">
+          <form id="form" class="form-contact" >
             <div class="contact-group">
-              <input id="name" type="text" placeholder=" " />
+              <input type="text" name="name" id="name" placeholder=" " />
               <label for="name">Nombre</label>
             </div>
 
             <div class="contact-group">
-              <input id="phone" type="text" placeholder=" "/>
+              <input type="tel" name="phone" id="phone" placeholder=" "/>
               <label for="phone">Teléfono</label>
             </div>
 
             <div class="contact-group">
-              <input id="email" type="email" placeholder=" "/>
+              <input type="email" name="email" id="email" placeholder=" "/>
               <label for="email">Correo Electronico</label>
             </div>
 
             <div class="contact-group">
-              <textarea id="txtConsult" rows="2" placeholder=" "></textarea>
-              <label for="consulta">Consulta</label>
+              <textarea name="txtConsult" id="txtConsult" rows="2" placeholder=" "></textarea>
+              <label for="txtConsult">Consulta</label>
             </div>
 
             <button type="submit" id="submit">Enviar</button>
@@ -56,7 +58,7 @@
       </div>
     </section>
 
-    <script src="contacto.js"></script>
+    <script src="/frontend/js/contacto.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
