--- a/frontend/html/nosotros.html
+++ b/frontend/html/nosotros.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="/frontend/css/nosotros.css" />
     <!-- Personalizacion -->
     <title>Nosotros</title>
-    <link rel="icon" type="image/png" href="/frontend/css/img/iconoagon-2@2x.png"/>
+    <link
+      rel="icon"
+      type="image/png"
+      href="/frontend/css/img/iconoagon-2@2x.png"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,24 +27,26 @@
   <body>
     <!-- CONTENEDOR PARA INFORMACION -->
     <div class="nosotros-container">
-        <div class="info-container">
-            <h1 class="title">¡Conócenos un poco!</h1>
-            <p>          ¡Bienvenidos a su tienda AGON! Nos dedicamos a mejorar tu bienestar y
-              rendimiento a través de una amplia gama de productos deportivos de
-              alta calidad, servicios de nutrición personalizados y entrenamientos
-              diseñados por expertos. Ya sea que busques el mejor equipamiento para
-              tus actividades deportivas, un plan de alimentación que potencie tu
-              energía y recuperación, o un programa de entrenamiento adaptado a tus
-              metas, en AGON encontrarás todo lo que necesitas para transformar tu
-              estilo de vida y alcanzar un nuevo nivel de rendimiento. Únete a
-              nuestra comunidad y descubre cómo podemos ayudarte a ser la mejor
-              versión de ti mismo.
-            </p>
-        </div>
-        <!-- CONTENEDOR PRINCIPAL PARA LAS CARDS -->
-        <div id="cards-team-container" class="row cards-team-container gap-3 ">
-
-        </div>
+      <div class="info-container">
+        <h1 class="title">¡Conócenos un poco!</h1>
+        <p>
+          ¡Bienvenidos a su tienda AGON! Nos dedicamos a mejorar tu bienestar y
+          rendimiento a través de una amplia gama de productos deportivos de
+          alta calidad, servicios de nutrición personalizados y entrenamientos
+          diseñados por expertos. Ya sea que busques el mejor equipamiento para
+          tus actividades deportivas, un plan de alimentación que potencie tu
+          energía y recuperación, o un programa de entrenamiento adaptado a tus
+          metas, en AGON encontrarás todo lo que necesitas para transformar tu
+          estilo de vida y alcanzar un nuevo nivel de rendimiento. Únete a
+          nuestra comunidad y descubre cómo podemos ayudarte a ser la mejor
+          versión de ti mismo.
+        </p>
+      </div>
+      <!-- CONTENEDOR PRINCIPAL PARA LAS CARDS -->
+      <div
+        id="cards-team-container"
+        class="row cards-team-container gap-3"
+      ></div>
     </div>
     <script src="/frontend/js/nosotros.js"></script>
     <script
@@ -48,57 +54,5 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-     <!--contenido footer-->
-     <footer>
-      <div class="container">
-        <div class="row">
-          <div class=""></div>
-          <div class="col-lg-1">
-            <img class="imgAgon" src="/frontend/css/img/imgAgon.png" alt="" />
-            <h6>AGON</h6>
-          </div>
-          <div class="col-lg-3">
-            <h5>Legal</h5>
-            <ul>
-              <li><a href="#">Términos y condiciones</a></li>
-              <li><a href="#">Políticas de privacidad</a></li>
-              <li><a href="#">Políticas de reembolsos</a></li>
-              <li><a href="#">Políticas de despachos</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4">
-            <h5>Suscríbete</h5>
-            <p>
-              Recibe 15% de descuento en tu primera compra. Entérate de
-              lanzamientos, tendencia y ofertas especiales.
-            </p>
-            <input
-              type="email"
-              value=""
-              placeholder="Correo electrónico"
-              name="contact"
-              id="Email"
-            />
-            <button type="submit" name="" aria-label="Suscribir">
-              <span class="footer__newsletter-btn-label"> Suscribir </span>
-            </button>
-          </div>
-          <div class="col-lg-4">
-            <h5>Síguenos</h5>
-            <ul>
-              <li <i class="bi bi-facebook"></i>Facebook</li>
-              <li <i class="bi bi-instagram"></i>Instagram</li>
-              <li <i class="bi bi-youtube"></i>Youtube</li>
-            </ul>
-          </div>
-        </div>
-        <div class="politicas">
-          <hr width="100%" color="grey">
-          <center>
-          <p>2024 AGON fitness Colombia. Todos los derechos reservados.</p>
-        </center>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
