cambios en el footer

--- a/frontend/html/footer.html
+++ b/frontend/html/footer.html
@@ -1,63 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
-    <title>Document</title>
-</head>
-<body>
-     <!--contenido footer-->
-     <footer>
-        <div class="container">
-          <div class="row">
-            <div class=""></div>
-            <div class="col-lg-1">
-              <img class="imgAgon" src="/frontend/css/img/imgAgon.png" alt="" />
-              <h6>AGON</h6>
-            </div>
-            <div class="col-lg-3">
-              <h5>Legal</h5>
-              <ul>
-                <li><a href="#">Términos y condiciones</a></li>
-                <li><a href="#">Políticas de privacidad</a></li>
-                <li><a href="#">Políticas de reembolsos</a></li>
-                <li><a href="#">Políticas de despachos</a></li>
-              </ul>
-            </div>
-            <div class="col-lg-4">
-              <h5>Suscríbete</h5>
-              <p>
-                Recibe 15% de descuento en tu primera compra. Entérate de
-                lanzamientos, tendencia y ofertas especiales.
-              </p>
-              <input
-                type="email"
-                value=""
-                placeholder="Correo electrónico"
-                name="contact"
-                id="Email"
-              />
-              <button type="submit" name="" aria-label="Suscribir">
-                <span class="footer__newsletter-btn-label"> Suscribir </span>
-              </button>
-            </div>
-            <div class="col-lg-4">
-              <h5>Síguenos</h5>
-              <ul>
-                <li <i class="bi bi-facebook"></i>Facebook</li>
-                <li <i class="bi bi-instagram"></i>Instagram</li>
-                <li <i class="bi bi-youtube"></i>Youtube</li>
-              </ul>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Footer</title>
+    <link rel="stylesheet" href="/frontend/css/footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
+    />
+  </head>
+  <body>
+    <footer class="footer">
+      <div class="content">
+        <div class="row">
+          <div class="col-lg-1">
+            <img class="imgAgon" src="/frontend/css/img/imgAgon.png" alt="" />
+            <h6>AGON</h6>
           </div>
-          <div class="politicas">
-            <hr width="100%" color="grey">
-            <center>
-            <p>2024 AGON fitness Colombia. Todos los derechos reservados.</p>
-          </center>
+          <div class="col-lg-3">
+            <h5>Legal</h5>
+            <ul>
+              <li><a href="#">Términos y condiciones</a></li>
+              <li><a href="#">Políticas de privacidad</a></li>
+              <li><a href="#">Políticas de reembolsos</a></li>
+              <li><a href="#">Políticas de despachos</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-4">
+            <h5>Suscríbete</h5>
+            <p>
+              Recibe 15% de descuento en tu primera compra. Entérate de
+              lanzamientos, tendencias y ofertas especiales.
+            </p>
+            <input
+              type="email"
+              value=""
+              placeholder="Correo electrónico"
+              name="contact"
+              id="Email"
+            />
+            <button type="submit" name="" aria-label="Suscribir">
+              <span class="footer__newsletter-btn-label">Suscribir</span>
+            </button>
+          </div>
+          <div class="col-lg-4">
+            <h5>Síguenos</h5>
+            <ul>
+              <li>
+                <a href=""><i class="bi bi-facebook"></i>Facebook </a>
+              </li>
+              <li>
+                <a href=""><i class="bi bi-instagram"></i> Instagram</a>
+              </li>
+              <li>
+                <a href=""><i class="bi bi-youtube"></i> YouTube</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </footer>
-</body>
+        <div class="politicas">
+          <hr width="100%" color="grey" />
+          <center>
+            <p>2024 AGON fitness Colombia. Todos los derechos reservados.</p>
+          </center>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
