--- a/frontend/html/nosotros.html
+++ b/frontend/html/nosotros.html
@@ -6,6 +6,7 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="/frontend/css/body.css" />
     <link rel="stylesheet" href="/frontend/css/nosotros.css" />
+    <link rel="stylesheet" href="/frontend/css/footer.css" />
     <!-- Personalizacion -->
     <title>Nosotros</title>
     <link
@@ -54,5 +55,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <footer></footer>
   </body>
 </html>
