Cambios img AGON

--- a/frontend/html/footer.html
+++ b/frontend/html/footer.html
@@ -18,11 +18,11 @@
     <footer class="footer">
       <div class="content">
         <div class="row">
-          <div class="col-lg-1">
+          <div class="col-lg-1 col-md-2 col-3 text-center">
             <img class="imgAgon" src="/frontend/css/img/imgAgon.png" alt="" />
             <h6>AGON</h6>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-5 col-9">
             <h5>Legal</h5>
             <ul>
               <li><a href="#">Términos y condiciones</a></li>
@@ -31,7 +31,7 @@
               <li><a href="#">Políticas de despachos</a></li>
             </ul>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-5 col-12">
             <h5>Suscríbete</h5>
             <p>
               Recibe 15% de descuento en tu primera compra. Entérate de
@@ -48,17 +48,17 @@
               <span class="footer__newsletter-btn-label">Suscribir</span>
             </button>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-5 col-12">
             <h5>Síguenos</h5>
             <ul>
               <li>
-                <a href=""><i class="bi bi-facebook"></i>Facebook </a>
+                <a href="#"><i class="bi bi-facebook"></i>Facebook </a>
               </li>
               <li>
-                <a href=""><i class="bi bi-instagram"></i> Instagram</a>
+                <a href="#"><i class="bi bi-instagram"></i> Instagram</a>
               </li>
               <li>
-                <a href=""><i class="bi bi-youtube"></i> YouTube</a>
+                <a href="#"><i class="bi bi-youtube"></i> YouTube</a>
               </li>
             </ul>
           </div>
