Cambios en el estilo

--- a/frontend/html/contacto.html
+++ b/frontend/html/contacto.html
@@ -68,9 +68,9 @@
         <div class="info-container-contact col d-flex">
           <h2>Más información:</h2>
           <div class="list-info-contact">
-            <div class="item-info-contact"><i class="bi bi-envelope"></i> agon.admin@agon.com</div>
-            <div class="item-info-contact"><i class="bi bi-instagram"></i> @_Agón</div>
-            <div class="item-info-contact"><i class="bi bi-facebook"></i> Agón</div>
+            <div class="item-info-contact"><a href="$" target="_blank" rel="noopener noreffer"><i class="bi bi-envelope"></i></a> agon.admin@agon.com</div>
+            <div class="item-info-contact"><a href="$" target="_blank" rel="noopener noreffer"><i class="bi bi-instagram"></i></a> @_Agón</div>
+            <div class="item-info-contact"><a href="$" target="_blank" rel="noopener noreffer"><i class="bi bi-facebook"></i></a> Agón</div>
             </div>
         </div>
         <div class="container-gris col-12 col-md-2"></div>
