--- a/frontend/html/navbar.html
+++ b/frontend/html/navbar.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Food Ricipes</title>
+    <!-- Personalización -->
+    <title>Agon</title>
+    <link rel="icon" type="image/png" href="/frontend/css/img/iconoagon-2@2x.png"/>
+
+    <!-- Bootstrap y fuentes-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/frontend/css/navbar.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -18,51 +23,75 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+  <!-- Estilos  -->
+    <link rel="stylesheet" href="/frontend/css/navbar.css" />
+
   </head>
   <body class="container-fluid">
     <header class="row flex-md-row position-sticky top-0 ">
-      <!-- Company Name -->
+      <!-- Logo -->
       <div
-        class="cajaMarca bg-primary text-secondary col-7 col-md-2 ps-3 py-5 pt-md-4 order-md-1">
+        class="cajaMarca col-7 col-md-2 order-md-1">
         <div class="logoContainer"> <img src="/frontend/css/img/iconoagon-2@2x.png" alt="Logo de Agon"> </div>       
-        <h1 class="titleAgon m-0 fs-3 fw-bold">AGON</h1>
+        <h1 class="titleAgon m-0 fw-bold">AGON</h1>
       </div>
- 
+
       <!-- Hamburguer Button  -->
-      <button class="bg-primary border-0 text-white col-2 fs-1 d-md-none top-0">
+      <button class="hamburger-button navbar-toggler border-0 col-2 fs-1 d-md-none top-0"
+      type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa-solid fa-bars"></i>
       </button>
+
       <!-- Navbar -->
-      <nav
-        class="col-12 col-md-8 d-flex flex-column align-items-end bg-secondary text-primary pe-5 py-2 py-md-4 order-md-2"
-      >
-        <ul class="d-md-flex list-unstyled column-gap-5 text-white d-none">
-          <li class="text-primary">Home</li>
-          <li>About</li>
-          <li>Recipies</li>
-          <li>Contac Us</li>
+      <nav class=" navbar col-12 col-md-8 order-md-2">
+        <!-- Barra de búsqueda -->
+        <div class="barra-busqueda ">
+          <div class="contenedor-box col-md-5">
+            <div class="box laptop">
+              <form name="search">
+                  <input type="text" class="input" name="txt" onmouseout="this.value = ''; this.blur();">
+              </form>
+              <i class="bi bi-search"></i>
+            </div>
+          </div>
+          
+        <!-- Menú de navegación -->
+        <ul id="navbar-toggler" class="navegacion col-12 col-md-7 d-md-flex list-unstyled column-gap-4 text-white m-0" >
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Categorías</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="contacto.html">Contáctenos</a></li>
         </ul>
+
+        <div class="contenedor-box col-12 d-md-none">
+          <div class="box mobile">
+            <form name="search">
+                <input type="text" class="input" name="txt" onmouseout="this.value = ''; this.blur();">
+            </form>
+            <i class="bi bi-search"></i>
+          </div>
+        </div>
+        
+      </div>
+      </div>
       </nav>
- 
-      <!-- Join Us icon -->
-      <div class="col-3 col-md-2 d-flex justify-content-center bg-primary order-first order-md-3 ps-3">
+
+      <!-- Iconos de usuario y carrito-->
+      <div class="botonesContainer col-3 col-md-2 d-flex justify-content-center order-first order-md-3 ">
           <div class="cajaBotonesContainer d-flex column-gap-3 fs-3">
-            <div class="cajaBtn d-none d-md-block">
-              <a href="">
+            <div class="cajaBtn">
+              <a href="#">
                 <i class="fa-solid fa-circle-user"></i></a>
             </div>
 
-            <div class="cajaBtn d-none d-md-block">
-              <a href=""><i class="fa-solid fa-basket-shopping"></i></a>
-                <!-- <p class="fw-bold">0</p> -->
+            <div class="cajaBtn">
+              <a href="#"><i class="fa-solid fa-basket-shopping"></i></a>
+              <span></span>
             </div>
           </div>
       </div>
 
     </header>
-    <div>
- 
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -70,4 +99,3 @@
     ></script>
   </body>
 </html>
- 
