--- a/frontend/html/nosotros.html
+++ b/frontend/html/nosotros.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Estilos -->
-    <link rel="stylesheet" href="/frontend/css/body.css" />
-    <link rel="stylesheet" href="/frontend/css/nosotros.css" />
-    <link rel="stylesheet" href="/frontend/css/footer.css" />
+
     <!-- Personalizacion -->
     <title>Nosotros</title>
     <link
@@ -24,7 +21,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+
+    <!-- Estilos -->
+    <link rel="stylesheet" href="/frontend/css/body.css" />
+    <link rel="stylesheet" href="/frontend/css/nosotros.css" />
+    <link rel="stylesheet" href="/frontend/css/navbar.css">
+    <link rel="stylesheet" href="/frontend/css/footer.css" />
+
+    <script src="/frontend/js/navbar.js"></script>
   </head>
+  <nav id="navbar-container"></nav>
   <body>
     <!-- CONTENEDOR PARA INFORMACION -->
     <div class="nosotros-container">
@@ -49,6 +55,7 @@
         class="row cards-team-container gap-3"
       ></div>
     </div>
+    <script src="/frontend/js/navbar.js"></script>
     <script src="/frontend/js/nosotros.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
