--- a/frontend/html/contacto.html
+++ b/frontend/html/contacto.html
@@ -82,6 +82,7 @@
 
     <footer></footer>
     <script src="/frontend/js/navbar.js"></script>
+    <script src="/frontend/js/footer.js"></script>
     <script src="/frontend/js/contacto.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
