Se agrega render de productos

--- a/frontend/html/categorias.html
+++ b/frontend/html/categorias.html
@@ -27,13 +27,17 @@
     <link rel="stylesheet" href="/frontend/css/productos.css" />
     <link rel="stylesheet" href="/frontend/css/navbar.css" />
     <link rel="stylesheet" href="/frontend/css/footer.css" />
+    <link rel="stylesheet" href="/frontend/css/categorias.css" />
 
     <script src="/frontend/js/navbar.js"></script>
   </head>
   <nav id="navbar-container"></nav>
   <body>
-    <section id="contenedor-cateforias">
-      <div class="categoria" id="productos"></div>
+    <section id="contenedor-categoria">
+      <div class="categoria" id="productos">
+        
+        </div>
+      </div>
       <div class="categoria" id="servicios"></div>
     </section>
 
