Se agregan filtros para subcategorias

--- a/frontend/html/categorias.html
+++ b/frontend/html/categorias.html
@@ -34,11 +34,10 @@
   <nav id="navbar-container"></nav>
   <body>
     <section id="contenedor-categoria">
-      <div class="categoria" id="productos">
-        
-        </div>
+      <div class="filtro">
+        <ul class="lista-subcategorias"></ul>
       </div>
-      <div class="categoria" id="servicios"></div>
+      <div class="categoria" id="productos"></div>
     </section>
 
     <!-- <script src="/frontend/js/f"></script> -->
