--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -4,19 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    <link rel="stylesheet" href="/frontend/css/login.css" />
+    <link rel="stylesheet" href="/frontend/css/body.css" />
   </head>
+
   <body>
-    <section>
-      <h2>Inicia sesion</h2>
-      <form id="login-form">
-        <label for="mail">Correo</label>
-        <input type="email" id="email" placeholder="..." required autofocus />
-        <label for="password">Contraseña</label>
-        <input id="password" type="password" placeholder="..." required />
-        <input type="submit" value="Ingresar" />
-      </form>
-      <p>¿No tienes una cuenta? <a href="registro.html">Regístrate</a></p>
+    <section class="modal2">
+      <div class="modalContainer2">
+        <div class="imgModal2">
+          <img src="/frontend/css/img/iconoagon-2@2x.png" alt="" />
+        </div>
+
+        <h2>Inicia sesion</h2>
+
+        <form class="formRegistro2" id="login-form">
+          <div class="registroGroup2" id="correo2">
+            <label class="textArea" for="mail">Correo</label>
+            <input
+              class="input2"
+              type="email"
+              id="email"
+              placeholder=" "
+              autocomplete="off"
+              autofocus
+            />
+          </div>
+          <div class="registroGroup2" id="contraseña2">
+            <label for="password">Contraseña</label>
+            <input id="password" type="password" placeholder=" " />
+          </div>
+          <input class="modalContinuar2" type="submit" value="Ingresar" />
+        </form>
+
+        <div class="noRegistrado">
+          <p>¿No tienes una cuenta? <a href="registro.html">Regístrate</a></p>
+        </div>
+
+        <p class="extra">O</p>
+
+        <div class="ingresarExtra">
+          <a href="" class="facebook">Continúa con Facebook</a>
+        </div>
+      </div>
     </section>
+
     <script src="/frontend/js/login.js"></script>
   </body>
 </html>
