--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -10,15 +10,9 @@
       <h2>Inicia sesion</h2>
       <form id="login-form">
         <label for="mail">Correo</label>
-        <input
-          type="email"
-          placeholder="..."
-          id="email-login"
-          required
-          autofocus
-        />
+        <input type="email" id="email" placeholder="..." required autofocus />
         <label for="password">Contraseña</label>
-        <input type="password" placeholder="..." id="password-login" required />
+        <input id="password" type="password" placeholder="..." required />
         <input type="submit" value="Ingresar" />
       </form>
       <p>¿No tienes una cuenta? <a href="registro.html">Regístrate</a></p>
