--- a/frontend/html/registro.html
+++ b/frontend/html/registro.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/frontend/css/body.css">
 </head>
 <body>
-    <!-- <header><nav id="navbar-container"></nav></header> -->
     
     <section class="modal">
         <div class="modalContainer">
@@ -60,4 +59,71 @@
     <script src="/frontend/js/registro.js"></script>
     <script src="https://kit.fontawesome.com/f499955f69.js" crossorigin="anonymous"></script>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="es">
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registro</title>
+    <link rel="stylesheet" href="/frontend/css/registro.css">
+    <link rel="stylesheet" href="/frontend/css/body.css">
+  </head>
+
+  <body>
+
+    <section class="modal">
+
+      <div class="modalContainer">
+
+        <div class="modalCloseContainer">
+            <a href="#" class="modalClose"><i class="fa-regular fa-circle-xmark"></i></a>
+        </div>
+
+        <div class="imgModal">
+            <img src="/frontend/css/img/iconoagon-2@2x.png" alt="">
+          </div> 
+
+        <h3>Registro</h3>
+        <p>Aquí comienza tu desafío</p>
+
+        <form class="formRegistro" id="registro-form">
+
+        <div class="registroGroup">
+          <label for="name">Nombre</label>
+          <input id="name" type="text" placeholder="" required autofocus />
+        </div>
+
+        <div class="registroGroup">
+          <label for="phone">Teléfono</label>
+          <input id="phone" type="number" placeholder="" required />
+        </div>
+
+        <div class="registroGroup">
+          <label for="email">Correo</label>
+          <input id="email" type="email" placeholder="" required />
+        </div>
+
+        <div class="registroGroup">
+          <label for="password">Contraseña</label>
+          <input id="password" type="password" placeholder="" required />
+        </div>
+
+        </form>
+
+        <a href="#" class="modalContinuar">Continuar</a>
+
+        <div class="yaRegistrado">
+          <p>¿Ya estás registrado? <a href="login.html">Inicia sesión</a></p>
+        </div>
+
+      </div>
+
+      <script src="/frontend/js/registro.js"></script>
+
+    </section>
+
+  </body>
 </html>
