Estilo login y registro

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -23,8 +23,8 @@
         <form class="formRegistro2" id="login-form">
 
           <div class="registroGroup2" id="correo2">
-            <label for="mail">Correo</label>
-            <input type="email" id="email" placeholder="" required autofocus />
+            <label class="textArea" for="mail">Correo</label>
+            <input class="input2" type="email" id="email" placeholder="" required autocomplete="off"  required autofocus />
           </div>
 
           <div class="registroGroup2" id="contraseña2">
@@ -50,5 +50,6 @@
     </section>
 
     <script src="/frontend/js/login.js"></script>
+    
   </body>
 </html>
