--- a/frontend/html/registro.html
+++ b/frontend/html/registro.html
@@ -1,66 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro Agón</title>
-    <link rel="stylesheet" href="/frontend/css/registro.css">
-    <link rel="stylesheet" href="/frontend/css/body.css">
-</head>
-<body>
-    
-    <section class="modal">
-        <div class="modalContainer">
-
-            <div class="modalCloseContainer">
-                <a href="#" class="modalClose"><i class="fa-regular fa-circle-xmark"></i></a>
-            </div>
-
-            <div class="imgModal">
-              <img src="/frontend/css/img/iconoagon-2@2x.png" alt="">
-            </div> 
-
-            <h3>Regístrate</h3>
-            <p>Aquí comienza tu desafío</p>
-
-            <form action="" class="formRegistro">
-
-                    <div class="registroGroup">
-                      <input type="text" name="name" id="name" placeholder=" " />
-                      <label for="name">Nombre</label>
-                    </div>
-
-                    <div class="registroGroup">
-                        <input type="email" name="name" id="name" placeholder=" " />
-                        <label for="name">Email</label>
-                    </div>
-
-                    <div class="registroGroup">
-                        <input type="number" name="name" id="name" maxlength="13" placeholder=" " />
-                        <label for="name">Teléfono</label>
-                    </div>
-
-                    <div class="registroGroup">
-                        <input type="password" name="name" id="name" placeholder=" " />
-                        <label for="name">Contraseña</label>
-                    </div>
-
-            </form>
-
-            <a href="#" class="modalContinuar">Continuar</a>
-            
-        </div>
-    </section>
-
-
-
-    <script src="/frontend/js/footer.js"></script>
-    <script src="/frontend/js/navbar.js"></script>
-    <script src="/frontend/js/registro.js"></script>
-    <script src="https://kit.fontawesome.com/f499955f69.js" crossorigin="anonymous"></script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -113,7 +50,8 @@
 
         </form>
 
-        <a href="#" class="modalContinuar">Continuar</a>
+        <!-- <a href="#" class="modalContinuar"> <input type="submit" value="Registrase"/> Continuar</a> -->
+        <input class="modalContinuar" type="submit" value="Registrase" />
 
         <div class="yaRegistrado">
           <p>¿Ya estás registrado? <a href="login.html">Inicia sesión</a></p>
