--- a/frontend/html/servicios.html
+++ b/frontend/html/servicios.html
@@ -41,7 +41,7 @@
     </section>
 
     <!-- <script src="/frontend/js/f"></script> -->
-    <script src="/frontend/js/categorias.js"></script>
+    <script src="/frontend/js/servicios.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
