--- a/frontend/html/navbar.html
+++ b/frontend/html/navbar.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="/frontend/css/navbar.css">
 </head>
 <body>
-  <nav class="navbar-container">
+  <nav class="">
     <section class="row flex-md-row position-sticky top-0 ">
 
       <!-- Logo -->
@@ -105,7 +105,7 @@
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
   crossorigin="anonymous"
   ></script>
-
-  <script src="/frontend/js/configNav.js"></script>
+<!-- 
+  <script src="/frontend/js/configNav.js"></script> -->
 </body>
 </html>
