--- a/frontend/html/nosotros.html
+++ b/frontend/html/nosotros.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="/frontend/css/body.css" />
     <link rel="stylesheet" href="/frontend/css/nosotros.css" />
     <!-- <link rel="stylesheet" href="/frontend/css/navbar.css"> -->
-    <link rel="stylesheet" href="/frontend/css/footer.css" />
+    <!-- <link rel="stylesheet" href="/frontend/css/footer.css" /> -->
 
     <script src="/frontend/js/navbar.js"></script>
     <script src="/frontend/js/footer.js"></script>
