--- a/frontend/html/categorias.html
+++ b/frontend/html/categorias.html
@@ -25,14 +25,14 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="/frontend/css/body.css" />
     <link rel="stylesheet" href="/frontend/css/productos.css" />
-    <link rel="stylesheet" href="/frontend/css/navbar.css" />
-    <link rel="stylesheet" href="/frontend/css/footer.css" />
     <link rel="stylesheet" href="/frontend/css/categorias.css" />
 
     <script src="/frontend/js/navbar.js"></script>
   </head>
-  <nav id="navbar-container"></nav>
+  
   <body>
+    <header><nav id="navbar-container"></nav></header>
+    
     <section id="contenedor-categoria">
       <div class="filtro">
         <ul class="lista-subcategorias"></ul>
@@ -42,6 +42,7 @@
 
     <!-- <script src="/frontend/js/f"></script> -->
     <script src="/frontend/js/categorias.js"></script>
+    <script src="/frontend/js/navbar.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
