--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -6,6 +6,17 @@
     <title>Login</title>
     <link rel="stylesheet" href="/frontend/css/login.css" />
     <link rel="stylesheet" href="/frontend/css/body.css" />
+    <!-- animate -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <!-- sweetalert -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.0/dist/sweetalert2.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.0/dist/sweetalert2.all.min.js"></script>
   </head>
 
   <body>
