imagenes productos y servicios

--- a/frontend/html/footer.html
+++ b/frontend/html/footer.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <footer class="footer">
-      <div class="content">
+      <div class="content-footer">
         <div class="row">
           <div class="col-lg-1 col-md-2 col-3 text-center">
             <img class="imgAgon" src="/frontend/css/img/imgAgon.png" alt="" />
