se agregó el boton para ver todo en productos y servicios

--- a/frontend/html/productos.html
+++ b/frontend/html/productos.html
@@ -30,12 +30,15 @@
     <link rel="stylesheet" href="/frontend/css/categorias.css" />
 
     <script src="/frontend/js/navbar.js"></script>
+    <script src="/frontend/js/footer.js"></script>
   </head>
   <nav id="navbar-container"></nav>
   <body>
     <section id="contenedor-categoria">
       <div class="filtro">
-        <ul class="lista-subcategorias"></ul>
+        <ul class="lista-subcategorias">
+          <li class="subcategoria">Ver todo</li>
+        </ul>
       </div>
       <div class="categoria" id="productos"></div>
     </section>
