Correción en estilos de todas las páginas, , cambio en estiolo de la navbar, responsive de las paginas

--- a/frontend/html/contacto.html
+++ b/frontend/html/contacto.html
@@ -32,10 +32,10 @@
     <nav id="navbar-container"></nav>
     <div class="contact-container">
       <section class="contact row">
-        <div class="container-logo col-12 col-md-1">
+        <div class="container-logo col-12 col-lg-1">
           <img src="/frontend/css/img/iconoagon-naranja.png" alt="Logo Agon" />
         </div>
-        <div class="card-container col-12 col-md-9">
+        <div class="card-container col-12 col-lg-9">
           <div class="card-contact-container col">
             <div class="form-container">
               <h2>¿Tienes alguna duda? <br />Cuéntanos un poco más</h2>
@@ -97,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div class="container-gris col-12 col-md-2"></div>
+        <div class="container-gris col-2 "></div>
       </section>
     </div>
 
