cambio imagenes en el home

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -118,25 +118,46 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="/frontend/css/img/manta.jpg" alt="" />
+            <img
+              src="https://contents.mediadecathlon.com/p2486884/k$95135fd03bd711a6935037cc1afc190d/prod.jpg?format=auto&quality=80&f=603x350"
+              alt=""
+            />
           </div>
           <div class="swiper-slide">
-            <img src="/frontend/css/img/manta.jpg" alt="" />
+            <img
+              src="https://contents.mediadecathlon.com/p1248562/k$01448487cc01f6437afa685728065895/prod.jpg?format=auto&quality=80&f=603x350"
+              alt=""
+            />
           </div>
           <div class="swiper-slide">
-            <img src="/frontend/css/img/manta.jpg" alt="" />
+            <img
+              src="https://contents.mediadecathlon.com/p2600501/k$d0cb2fc9af587718b83800ddb3da5d5d/prod.jpg?format=auto&quality=80&f=603x350"
+              alt=""
+            />
           </div>
           <div class="swiper-slide">
-            <img src="/frontend/css/img/manta.jpg" alt="" />
+            <img
+              src="https://contents.mediadecathlon.com/p2151029/k$19bf0adf16717a81a98b0592169b3eb5/prod.jpg?format=auto&quality=80&f=603x350"
+              alt=""
+            />
           </div>
           <div class="swiper-slide">
-            <img src="/frontend/css/img/manta.jpg" alt="" />
+            <img
+              src="https://contents.mediadecathlon.com/p2006790/k$42e498d4b762040f804f2c8ce35f0ffb/prod.jpg?format=auto&quality=80&f=603x350"
+              alt=""
+            />
           </div>
           <div class="swiper-slide">
-            <img src="/frontend/css/img/manta.jpg" alt="" />
+            <img
+              src="https://contents.mediadecathlon.com/p2579629/k$3355f726e334b1250ee450975961371e/prod.jpg?format=auto&quality=80&f=603x350"
+              alt=""
+            />
           </div>
           <div class="swiper-slide">
-            <img src="/frontend/css/img/manta.jpg" alt="" />
+            <img
+              src="https://contents.mediadecathlon.com/p2245855/k$fda466dafee1c2e7846d53bb7d69de7f/prod.jpg?format=auto&quality=80&f=603x350"
+              alt=""
+            />
           </div>
         </div>
         <div class="swiper-pagination"></div>
