--- a/frontend/html/navbar.html
+++ b/frontend/html/navbar.html
@@ -74,7 +74,7 @@
             class="lista-navbar col-lg-7 d-lg-flex list-unstyled column-gap-4 m-0"
           >
             <li class="lista-navbar-item">
-              <a href="inicio.html" class="lista-navbar-link">Inicio</a>
+              <a href="home.html" class="lista-navbar-link">Inicio</a>
             </li>
             <li class="lista-navbar-item lista-navbar-item--show">
               <a href="#" class="lista-navbar-link"
