Arreglo de estilo en servicios y lógica carrito

--- a/frontend/html/carrito.html
+++ b/frontend/html/carrito.html
@@ -83,7 +83,7 @@
       <div class="botonesContainer col-3 col-md-2 d-flex justify-content-center order-first order-md-3 ">
           <div class="cajaBotonesContainer d-flex column-gap-3 fs-3">
             <div class="cajaBtn">
-              <a href="#">
+              <a href="login.html">
                 <i class="fa-solid fa-circle-user"></i></a>
             </div>
 
