--- a/frontend/html/productos.html
+++ b/frontend/html/productos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Personalizacion -->
-    <title>categorias</title>
+    <title> Productos </title>
     <link
       rel="icon"
       type="image/png"
@@ -25,9 +25,6 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="/frontend/css/body.css" />
     <link rel="stylesheet" href="/frontend/css/productos.css" />
-    <link rel="stylesheet" href="/frontend/css/navbar.css" />
-    <link rel="stylesheet" href="/frontend/css/footer.css" />
-    <link rel="stylesheet" href="/frontend/css/categorias.css" />
 
     <script src="/frontend/js/navbar.js"></script>
     <script src="/frontend/js/footer.js"></script>
