--- a/frontend/html/servicios.html
+++ b/frontend/html/servicios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Personalizacion -->
-    <title>categorias</title>
+    <title> Servicios </title>
     <link
       rel="icon"
       type="image/png"
@@ -24,13 +24,8 @@
 
     <!-- Estilos -->
     <link rel="stylesheet" href="/frontend/css/body.css" />
-    <link rel="stylesheet" href="/frontend/css/productos.css" />
-    <link rel="stylesheet" href="/frontend/css/navbar.css" />
-    <link rel="stylesheet" href="/frontend/css/footer.css" />
-    <link rel="stylesheet" href="/frontend/css/categorias.css" />
+    <link rel="stylesheet" href="/frontend/css/servicios.css" />
 
-    <script src="/frontend/js/navbar.js"></script>
-    <script src="/frontend/js/footer.js"></script>
   </head>
   <nav id="navbar-container"></nav>
   <body>
@@ -42,8 +37,9 @@
       </div>
       <div class="categoria" id="productos"></div>
     </section>
-
-    <!-- <script src="/frontend/js/f"></script> -->
+    
+    <script src="/frontend/js/navbar.js"></script>
+    <script src="/frontend/js/footer.js"></script>
     <script src="/frontend/js/servicios.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
