contacto en home

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -44,7 +44,7 @@
       .swiper-slide {
         background-position: center;
         background-size: cover;
-        width: 300px;
+        width: 400px;
         /* height: 300px; */
       }
 
@@ -164,9 +164,14 @@
       </div>
     </section>
 
+    <section>
+      <div id="contacto-container-home"></div>
+    </section>
+
     <footer></footer>
     <script src="/frontend/js/navbar.js"></script>
     <script src="/frontend/js/footer.js"></script>
+    <script src="/frontend/js/contacto.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
