--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -107,7 +107,7 @@
       </div>
       <!-- Boton ver más   -->
       <button class="btn-vermas-home">
-        <a href="categorias.html">¡Comprar ahora!</a>
+        <a href="productos.html">¡Comprar ahora!</a>
       </button>
     </section>
 
